--- a/vbox/docker/Vagrantfile
+++ b/vbox/docker/Vagrantfile
@@ -17,6 +17,12 @@ Vagrant.configure("2") do |config|
       sudo apt-get update
       sudo apt-get install -y docker.io docker-compose
       sudo usermod -aG docker vagrant
-      sudo apt install make
+      sudo curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+      sudo chmod +x kubectl
+      sudo mkdir -p ~/.local/bin/kubectl
+      sudo sudo mv ./kubectl /usr/local/bin
+      sudo curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.11.1/kind-linux-amd64
+      sudo chmod +x ./kind
+      sudo mv ./kind /usr/local/bin
     SHELL
   end
